src/test/deca/syntax/invalid/parser/oracle/method_block_cast.deca
class A { a a (a a) {(types)  ident} }
